--- a/en/droptica/index.html
+++ b/en/droptica/index.html
@@ -195,7 +195,7 @@ margin-bottom: 1rem;
 }
 
 /*--><!]]>*/
-</style><h1>We are Droptica</h1>
+              </style><h1>We are Droptica, a <a href="https://www.droptica.com/drupal-agency/>Drupal agency</a></h1>
 </div>
       
           </div>
@@ -249,6 +249,10 @@ display:none
 <h3 class="text-align-center">Why choose Droptica?</h3>
 
 <p>Our approach is why the clients from all around the world trust us. We engage in long-lasting relationships with them. We are valued for effective communication and delivery of only working, scalable and bug-free solutions.</p>
+              <p>We offer:</p>
+              <ul><li><a href="https://www.droptica.com/services/drupal/> Drupal development services</a></li>
+      <li><ul><li><a href="https://www.droptica.com/services/drupal-support/> Drupal support</a></li>
+        </ul>
 
 <p> </p>
 <img alt="Projekty" data-entity-type="file" data-entity-uuid="fd87121e-360f-4494-8a9e-bb0a92870067" src="/sites/default/files/inline-images/Droptica Client Reviews   Clutch co.png" class="align-center" /><p> </p>
