--- a/pl/droptica/index.html
+++ b/pl/droptica/index.html
@@ -196,7 +196,7 @@ margin-bottom: 1rem;
 }
 
 /*--><!]]>*/
-</style><h1>Jesteśmy Droptica</h1>
+</style><h1>Jesteśmy Droptica, <a href="https://www.droptica.pl/agencja-drupal/">agencja od Drupala</a></h1>
 </div>
       
           </div>
@@ -255,6 +255,11 @@ display:none
 
 <p>Sposób, w jaki działamy sprawia, że ufają nam klienci z całego świata. Angażujemy się z nimi w długotrwałe i owocne relacje. Nasi klienci doceniają nas za efektywną komunikację i dostarczanie wyłącznie poprawnie działających, wolnych od błędów i skalowalnych rozwiązań.</p>
 
+              <p>Oferujemy:</p>
+              <ul><li><a href="https://www.droptica.com/services/drupal/"> Drupal development</a></li>
+      <li><ul><li><a href="https://www.droptica.com/services/drupal-support/"> Drupal support</a></li>
+        </ul>
+              
 <p> </p>
 <img alt="Projekty" data-entity-type="file" data-entity-uuid="fd87121e-360f-4494-8a9e-bb0a92870067" src="/sites/default/files/inline-images/Droptica Client Reviews   Clutch co.png" class="align-center" /><p> </p>
 
