--- a/en/droptica/index.html
+++ b/en/droptica/index.html
@@ -251,7 +251,7 @@ display:none
 <p>Our approach is why the clients from all around the world trust us. We engage in long-lasting relationships with them. We are valued for effective communication and delivery of only working, scalable and bug-free solutions.</p>
               <p>We offer:</p>
               <ul><li><a href="https://www.droptica.com/services/drupal/"> Drupal development services</a></li>
-      <li><ul><li><a href="https://www.droptica.com/services/drupal-support/"> Drupal support</a></li>
+      <li><a href="https://www.droptica.com/services/drupal-support/"> Drupal support</a></li>
         </ul>
 
 <p> </p>
