--- a/pl/droptica/index.html
+++ b/pl/droptica/index.html
@@ -257,7 +257,7 @@ display:none
 
               <p>Oferujemy:</p>
               <ul><li><a href="https://www.droptica.com/services/drupal/"> Drupal development</a></li>
-      <li><ul><li><a href="https://www.droptica.com/services/drupal-support/"> Drupal support</a></li>
+      <li><a href="https://www.droptica.com/services/drupal-support/"> Drupal support</a></li>
         </ul>
               
 <p> </p>
