--- a/en/droptica/index.html
+++ b/en/droptica/index.html
@@ -195,7 +195,7 @@ margin-bottom: 1rem;
 }
 
 /*--><!]]>*/
-              </style><h1>We are Droptica, a <a href="https://www.droptica.com/drupal-agency/">Drupal agency</a></h1>
+              </style><h1>We are Droptica <br/><a href="https://www.droptica.com/drupal-agency/">Drupal agency</a></h1>
 </div>
       
           </div>
