--- a/pl/droptica/index.html
+++ b/pl/droptica/index.html
@@ -196,7 +196,7 @@ margin-bottom: 1rem;
 }
 
 /*--><!]]>*/
-</style><h1>Jesteśmy Droptica, <a href="https://www.droptica.pl/agencja-drupal/">agencja od Drupala</a></h1>
+</style><h1>Jesteśmy Droptica <br/> <a href="https://www.droptica.pl/agencja-drupal/">agencja od Drupala</a></h1>
 </div>
       
           </div>
